// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addCustomInstructions should combine all custom instructions 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Language Preference:
You should always speak and think in the "fr" language.

Mode-specific Instructions:
Custom test instructions

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should combine global and mode-specific instructions 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Global Instructions:
Global instructions

Mode-specific Instructions:
Mode-specific instructions

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should fall back to generic rules when mode-specific rules not found 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should handle empty mode-specific instructions 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should handle undefined mode-specific instructions 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should include custom instructions when provided 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Mode-specific Instructions:
Custom test instructions

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should include preferred language when provided 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Language Preference:
You should always speak and think in the "es" language.

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should prioritize mode-specific instructions after global ones 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Global Instructions:
First instruction

Mode-specific Instructions:
Second instruction

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should prioritize mode-specific rules for architect mode 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Rules:
# Rules from .clinerules-architect:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should prioritize mode-specific rules for ask mode 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Rules:
# Rules from .clinerules-ask:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should prioritize mode-specific rules for code mode 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should prioritize mode-specific rules for code reviewer mode 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Rules:
# Rules from .clinerules-review:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should prioritize mode-specific rules for test engineer mode 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Rules:
# Rules from .clinerules-test:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;

exports[`addCustomInstructions should trim mode-specific instructions 1`] = `
"
====

USER'S CUSTOM INSTRUCTIONS

The following additional instructions are provided by the user, and should be followed to the best of your ability without interfering with the TOOL USE guidelines.

Mode-specific Instructions:
  Custom mode instructions  

Rules:
# Rules from .clinerules-code:
Mock mode-specific rules
# Rules from .clinerules:
Mock generic rules"
`;
